# chat

./: .env  README.md  docker-compose.yml  lgtm.yml
.github/workflows/: build.yml  codecov.yml  codeql.yml  docker.yml  sonar.yml
api/: Dockerfile  Program.cs  api.csproj  api.sln
api/Controllers/: ChatController.cs
api/Model/: MessageIn.cs
api/Services/: MessageService.cs  SecurityService.cs  StockService.cs
api/src/: Program.cs  api.csproj
api/src/Model/: MessageOut.cs  Request.cs
api/src/Properties/: launchSettings.json
api/src/Services/: CommandService.cs  MessageService.cs  SecurityService.cs  StockService.cs  StooqService.cs
api/tests/: CommandServiceTests.cs  MessageServiceTests.cs  SecurityServiceTests.cs  StockServiceTests.cs  StooqService.cs  tests.csproj
mq/: Dockerfile
mq/etc/: definitions.json
web/: Cargo.toml  Dockerfile  index.html
web/src/: main.rs
web/src/inner/: chat_component.rs  communication.rs  message_in.rs  message_out.rs  mod.rs
